--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-1.76MB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-988.8KB/s(Youtube:不良林), server: 38.64.138.145, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇺🇸 美国-1.71MB/s(Youtube:不良林), server: 38.75.136.21, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-1.54MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-680.4KB/s(Youtube:不良林), server: 38.114.114.19, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-212.9KB/s(Youtube:不良林), server: 38.68.134.85, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-316.6KB/s(Youtube:不良林), server: 38.68.134.85, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-892.2KB/s(Youtube:不良林), server: 38.143.66.55, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇦 加拿大-292.1KB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-220.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-201.3KB/s(Youtube:不良林), server: 120.233.29.189, port: 65071, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
+  - {name: 🇫🇷 法国-219.2KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-316.6KB/s(Youtube:不良林), server: 38.68.134.85, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-4.67MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-442.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-371.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-778.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-477.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-680.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-212.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-892.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-292.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-219.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-371.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.7KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-680.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-212.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-892.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-292.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-219.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-371.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.7KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-680.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-212.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-892.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-292.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-219.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-371.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.7KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-680.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-212.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-892.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-292.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-219.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-371.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.7KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-680.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-212.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-892.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-292.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-219.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-371.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.7KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-680.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-212.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-892.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-292.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-219.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-371.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.7KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-1.76MB/s(Youtube:不良林)
-      - 🇺🇸 美国-988.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.71MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-680.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-212.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-892.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-292.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-220.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
+      - 🇫🇷 法国-219.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-371.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-477.7KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
