--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-220.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-201.3KB/s(Youtube:不良林), server: 120.233.29.189, port: 65071, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
-  - {name: 🇫🇷 法国-219.2KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-316.6KB/s(Youtube:不良林), server: 38.68.134.85, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-4.67MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-442.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-371.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-778.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-477.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34004, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-182.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65078, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇭🇰 (已存活10天)香港-2.50MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇺🇸 美国-2.27MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.89MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇺🇸 美国-559.5KB/s(Youtube:不良林), server: us07.xiaoqi99.cf, port: 10229, type: vmess, uuid: fbf813bf-8df7-4729-8e94-667b17544e0f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: us07.xiaoqi99.cf}}
+  - {name: 🇨🇳 中国-442.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-355.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-463.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.39MB/s(Youtube:不良林), server: node.sin.entrance.cyou, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: node.sin.entrance.cyou, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-220.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-219.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-559.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-220.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-219.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-559.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-220.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-219.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-559.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活10天)香港-2.50MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.89MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-220.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-219.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-559.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-220.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-219.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-559.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-220.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-219.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-559.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-220.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-201.3KB/s(Youtube:不良林)
-      - 🇫🇷 法国-219.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-316.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-442.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-371.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-778.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-477.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-182.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活10天)香港-2.50MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-559.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-442.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-355.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-463.4KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.39MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
